# crmt

./: .gitignore  CMakeLists.txt  README  RunThroughData.C  TODO  combiner.C  convert_daq_data_to_simulation_data.C  crmt.cxx  doxygen.cfg  splitter.C
output/: README
reco/: CMakeLists.txt
reco/include/: Detector.h  Fiber.h  FileManager.h  Geometry.h  Line.h  RecoModule.h  Track.h  VStyle.h  Viewer.h
reco/src/: Detector.cxx  Fiber.cxx  FileManager.cxx  Geometry.cxx  Line.cxx  RecoModule.cxx  Track.cxx  Viewer.cxx
scripts/: check_hits.py  test_edge_hits.C  testit.C
sim/: CMakeLists.txt  CMakeLists.txt~
sim/include/: MCTrack.h  Module.h  TestVolume.h  evd.h  evg.h
sim/src/: MCTrack.cxx  Module.cxx  TestVolume.cxx  ev3d.cxx  evd.cxx  evg.cxx
